# pyra

./: .gitignore  README.md  cli.py
.github/workflows/: ci.yml
compiler/: Cargo.toml  LICENSE
compiler/benches/: compile_bench.rs  lexer_bench.rs
compiler/src/: abi.rs  ast.rs  codegen.rs  compiler.rs  evm.rs  gas.rs  ir.rs  lexer.rs  lib.rs  parser.rs  security.rs  storage.rs  typer.rs  verifier.rs
compiler/tests/: cli.rs  smoke.rs
contracts/: ERC20.pyra  Vault.pyra
docs/: INSTALL.md  architecture.md  language_reference.md
pyra/: ast.py  codegen.py  parser.py
stdlib/: README.md  erc20.pyra  math.pyra
tests/: Cargo.toml  integration_tests.rs
