[package]
name = "pyra-compiler"
version = "0.1.0"
edition = "2021"
authors = ["DavidIfebueme"]
description = "A Pythonic Smart Contract Language for the EVM"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DavidIfebueme/pyra"
keywords = ["blockchain", "smart-contracts", "evm", "compiler", "solidity"]
categories = ["development-tools", "compilers"]

[dependencies]
logos = "0.13"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "test_lexer"
path = "src/bin/test_lexer.rs"

[[bench]]
name = "lexer_bench"
harness = false